--- a/pom.xml
+++ b/pom.xml
@@ -17,8 +17,27 @@
                     <target>7</target>
                 </configuration>
             </plugin>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-jar-plugin</artifactId>
+                <version>2.4</version>
+                <configuration>
+                    <archive>
+                        <manifest>
+                            <addClasspath>
+                                true
+                            </addClasspath>
+                            <classpathPrefix>
+                                lib/
+                            </classpathPrefix>
+                            <mainClass>com.huajun.Main</mainClass>
+                        </manifest>
+                    </archive>
+                </configuration>
+            </plugin>
         </plugins>
     </build>
+
     <dependencies>
         <dependency>
             <groupId>org.junit.jupiter</groupId>
